# qwebsocket

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README  README.md  echotest.cpp  echotest.ui  httpdaemon.cpp  httpdaemon.h  main.cpp  qwebsocket.cpp  qwebsocket.h  qwebsocket.pc.in  qwebsocket.pro  resources.qrc  websocket.html  websocket.js
examples/echotest/: echotest.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  QWebSocket.cpp  QWebSocket.h  QWebSocketWrapper.cpp  QWebSocketWrapper.h
